// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuoteModel maps a resource quote with votes to a Quote 1`] = `
Quote {
  "amountOfVotes": 4,
  "author": "C. A. R. Hoare",
  "quote": "There are two ways of constructing a software design; one way is to make it so simple that there are obviously no deficiencies, and the other way is to make it so complicated that there are no obvious deficiencies. The first method is far more difficult.",
  "ratingAverage": 4.75,
}
`;

exports[`QuoteModel maps an API resource to a quote object 1`] = `
Quote {
  "amountOfVotes": undefined,
  "author": "C. A. R. Hoare",
  "quote": "There are two ways of constructing a software design; one way is to make it so simple that there are obviously no deficiencies, and the other way is to make it so complicated that there are no obvious deficiencies. The first method is far more difficult.",
  "ratingAverage": undefined,
}
`;
